improve symptombypatient record order improve reports view with css

--- a/View/SymptByPatient2_Form.html
+++ b/View/SymptByPatient2_Form.html
@@ -67,7 +67,7 @@
     }
     $dec_selector .= '</select>';
 
-    echo '<div class="deceases">';
+    echo '<div class="bold warningtext deceases">Остаточний діагноз (якщо відомо): ';
     echo $dec_selector;
     echo '</div>';
 
