--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
 #form_container {
     border: 1px solid black;
     background-color: #ffffcc;
-    width: 750px;
+    width: 98%;
     padding: 10px;
     margin: 10px 0px 10px 0px;
 }
@@ -60,6 +60,7 @@ h1 {
     padding: 5px;
     margin: 5px;
     background-color: rgba(143, 188, 143, 0.58);
+    display: inline-table;
 }
 
 .symptcattitletext {
