--- a/View/SymptByPatient2_Form.html
+++ b/View/SymptByPatient2_Form.html
@@ -51,6 +51,8 @@
 <!-- container for the main body of the form -->
 <div id="form_container">
     <div id="result"></div>
+    <div class="alert-box success">Saving Successful!</div>
+    <div class="alert-box failure">Saving Failure!</div>
 <div id="general">
 
 <?php
@@ -155,7 +157,15 @@ $(document).ready(function(){
             //console.log(data);
             //var content = $(data).toString();
             //$("#result").empty().append(content);
-            alert('form was submitted!');
+            $( "div.success" ).fadeIn( 300 ).delay( 1500 ).fadeOut( 400 );
+            //alert('form was submitted!');
+        });
+        posting.error(function(data) {
+            //console.log(data);
+            //var content = $(data).toString();
+            //$("#result").empty().append(content);
+            $( "div.failure" ).fadeIn( 300 ).delay( 1500 ).fadeOut( 400 );
+            //alert('form was submitted!');
         });
     });
     $(".dontsave").click(function() { location.href='<?php echo "$this->returnurl";?>'; });
