--- a/style.css
+++ b/style.css
@@ -112,6 +112,27 @@ h1 {
     vertical-align: top;
 }
 
+.alert-box {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+.success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    display: none;
+}
+
+.failure {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    display: none;
+}
+
 #print_form_container {
     border: 1px solid black;
     background-color: #ffffcc;
