openemr 5.0 minimal compatibility

--- a/View/SymptByPatient2_Form.html
+++ b/View/SymptByPatient2_Form.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <!-- supporting javascript code -->
-<script type="text/javascript" src="/openemr/library/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/openemr/interface/forms/<?php echo $this->form_folder; ?>/js/jquery-1.7.2.min.js"></script>
 
     <!-- page styles -->
 <link rel="stylesheet" href="/openemr/interface/themes/style_oemr.css" type="text/css">
@@ -44,7 +44,7 @@
 <!-- Save/Cancel links -->
 <input type="button" class="save" value="<?php xl('Save and Exit','e'); ?>"> &nbsp;
 <input type="button" class="saveajax" value="<?php xl('Save','e'); ?>"> &nbsp;
-<input type="button" class="dontsave" value="<?php xl('Don\'t Save Changes','e'); ?>"> &nbsp; 
+<input type="button" class="dontsave" value="<?php xl('Don\'t Save Changes','e'); ?>"> &nbsp;
 <input type="button" class="printform" value="<?php xl('Print','e'); ?>"> &nbsp;
 <input type="button" class="adminform" value="<?php xl('CDSS Admin','e'); ?>"> &nbsp;
 
