--- a/View/SymptByPatient2_Form.html
+++ b/View/SymptByPatient2_Form.html
@@ -3,24 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <!-- supporting javascript code -->
-<script type="text/javascript" src="/openemr/interface/forms/<?php echo $this->form_folder; ?>/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/interface/forms/<?php echo $this->form_folder; ?>/js/jquery-1.7.2.min.js"></script>
 
     <!-- page styles -->
-<link rel="stylesheet" href="/openemr/interface/themes/style_oemr.css" type="text/css">
-<link rel="stylesheet" href="/openemr/interface/forms/<?php echo $this->form_folder; ?>/style.css" type="text/css">
+<link rel="stylesheet" href="/interface/themes/style_oemr.css" type="text/css">
+<link rel="stylesheet" href="/interface/forms/<?php echo $this->form_folder; ?>/style.css" type="text/css">
 
     <script type="text/javascript" language="javascript">
     // this line is to assist the calendar text boxes
     var mypcc = '<?php echo $GLOBALS["phone_country_code"] ?>';
 
     function PrintForm() {
-        newwin = window.open("<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/openemr/interface/forms/'.$this->form_folder.'/print.php?id='.$_GET['id']; ?>","mywin");
+        newwin = window.open("<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/interface/forms/'.$this->form_folder.'/print.php?id='.$_GET['id']; ?>","mywin");
     };
     function AdminForm() {
-        newwin = window.open("<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/openemr/interface/forms/'.$this->form_folder.'/admin/web/'; ?>","admincdsswin");
+        newwin = window.open("<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/interface/forms/'.$this->form_folder.'/admin/web/'; ?>","admincdsswin");
     };
     function AdminFormFrame() {
-        top.frames['RBot'].location = "<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/openemr/interface/forms/'.$this->form_folder.'/admin/web/index.php?authUser='.$_SESSION['authUser']; ?>";
+        top.frames['RBot'].location = "<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/interface/forms/'.$this->form_folder.'/admin/web/index.php?authUser='.$_SESSION['authUser']; ?>";
     }
     </script>
 
@@ -30,7 +30,7 @@
 
 <span class="bold"><?php echo 'Сьогодні:&nbsp;'.date("d, F, Y", time()); ?></span><br>
 
-<form method=post action="<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir?>/openemr/interface/forms/<?php echo $this->form_folder; ?>/save.php?mode=<?php echo $this->form_mode; ?>&id=<?php echo $_GET['id'];?>" name="pregnancy_cdss_form" id="pregnancyCdssFormId">
+<form method=post action="<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir?>/interface/forms/<?php echo $this->form_folder; ?>/save.php?mode=<?php echo $this->form_mode; ?>&id=<?php echo $_GET['id'];?>" name="pregnancy_cdss_form" id="pregnancyCdssFormId">
 <span class="title"><?php xl($this->form_name,'e'); ?></span><br>
 
 <input type="hidden" name="id" value="<?php echo $this->form_idexam; ?>" />
@@ -118,7 +118,7 @@ foreach ($SymptCategory as $key=>$SymptCat)
             //end symptom option
             echo '</div>';
         }
-        echo '<div class="centertext"><img class="clearsympt" src="/openemr/interface/pic/Clear.gif"></div>';
+        echo '<div class="centertext"><img class="clearsympt" src="/interface/pic/Clear.gif"></div>';
         //end symptom
         echo '</div>';
     }
