--- a/View/SymptByPatient2_Form.html
+++ b/View/SymptByPatient2_Form.html
@@ -2,35 +2,44 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<?php 
+if (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] == 'on') {
+    $formpath = 'https://'.$_SERVER['SERVER_NAME'].$GLOBALS["web_root"].'/interface/forms/'.$this->form_folder;
+    $globalpath = 'https://'.$_SERVER['SERVER_NAME'].$GLOBALS["web_root"];
+} else {
+    $formpath = 'http://'.$_SERVER['SERVER_NAME'].$GLOBALS["web_root"].'/interface/forms/'.$this->form_folder;
+    $globalpath = 'http://'.$_SERVER['SERVER_NAME'].$GLOBALS["web_root"];
+}
+?>
 <!-- supporting javascript code -->
-<script type="text/javascript" src="/interface/forms/<?php echo $this->form_folder; ?>/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="<?php echo $formpath; ?>/js/jquery-1.7.2.min.js"></script>
 
     <!-- page styles -->
-<link rel="stylesheet" href="/interface/themes/style_oemr.css" type="text/css">
-<link rel="stylesheet" href="/interface/forms/<?php echo $this->form_folder; ?>/style.css" type="text/css">
+<link rel="stylesheet" href="<?php echo $globalpath; ?>/interface/themes/style_oemr.css" type="text/css">
+<link rel="stylesheet" href="<?php echo $formpath; ?>/style.css" type="text/css">
 
     <script type="text/javascript" language="javascript">
     // this line is to assist the calendar text boxes
     var mypcc = '<?php echo $GLOBALS["phone_country_code"] ?>';
 
     function PrintForm() {
-        newwin = window.open("<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/interface/forms/'.$this->form_folder.'/print.php?id='.$_GET['id']; ?>","mywin");
+        newwin = window.open("<?php echo $formpath.'/print.php?id='.$_GET['id']; ?>","mywin");
     };
     function AdminForm() {
-        newwin = window.open("<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/interface/forms/'.$this->form_folder.'/admin/web/'; ?>","admincdsswin");
+        newwin = window.open("<?php echo $formpath.'/admin/web/'; ?>","admincdsswin");
     };
     function AdminFormFrame() {
-        top.frames['RBot'].location = "<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir.'/interface/forms/'.$this->form_folder.'/admin/web/index.php?authUser='.$_SESSION['authUser']; ?>";
+        top.frames['RBot'].location = "<?php echo $formpath.'/admin/web/index.php?authUser='.$_SESSION['authUser']; ?>";
     }
     </script>
 
 </head>
 
 <body class="body_top">
-
+<?php var_dump($globalpath); ?>
 <span class="bold"><?php echo 'Сьогодні:&nbsp;'.date("d, F, Y", time()); ?></span><br>
 
-<form method=post action="<?php echo 'http://'.$_SERVER['SERVER_NAME'].$rootdir?>/interface/forms/<?php echo $this->form_folder; ?>/save.php?mode=<?php echo $this->form_mode; ?>&id=<?php echo $_GET['id'];?>" name="pregnancy_cdss_form" id="pregnancyCdssFormId">
+<form method=post action="<?php echo $formpath; ?>/save.php?mode=<?php echo $this->form_mode; ?>&id=<?php echo $_GET['id'];?>" name="pregnancy_cdss_form" id="pregnancyCdssFormId">
 <span class="title"><?php xl($this->form_name,'e'); ?></span><br>
 
 <input type="hidden" name="id" value="<?php echo $this->form_idexam; ?>" />
@@ -118,7 +127,7 @@ foreach ($SymptCategory as $key=>$SymptCat)
             //end symptom option
             echo '</div>';
         }
-        echo '<div class="centertext"><img class="clearsympt" src="/interface/pic/Clear.gif"></div>';
+        echo '<div class="centertext"><img class="clearsympt" src="'.$globalpath.'/interface/pic/Clear.gif"></div>';
         //end symptom
         echo '</div>';
     }
